{
    "name": "InputActions",
    "maps": [
        {
            "name": "InputGame",
            "id": "964bee49-da7d-4df7-adcc-6f173c62ddb6",
            "actions": [
                {
                    "name": "EnterMenu",
                    "type": "Value",
                    "id": "617bd2be-8ddf-4b66-bdab-2f6c51b12638",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BoardCenter",
                    "type": "Value",
                    "id": "b64fa835-9a40-4e74-acb9-da6fc3bc67cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveInput",
                    "type": "Value",
                    "id": "baf8f3a0-07b1-48db-bd19-9debabd5771e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "0930822a-a381-45c9-8eaf-cb4a34c70871",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "949faeb8-757d-49c9-9ab2-30f76ba23540",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch0",
                    "type": "Value",
                    "id": "ea410897-de49-4b5c-9dfa-c5fb624793e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1",
                    "type": "Value",
                    "id": "1eeb0742-2e36-4c17-a609-5500be17a04d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MMBPress",
                    "type": "Button",
                    "id": "e994d256-7349-4a66-afb6-eac82898ac6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c9979fc5-677d-413e-91a2-cda5746388ed",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21a61afe-ccac-4def-bd34-d2383ea95a6c",
                    "path": "<Touchscreen>/{Back}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d94669fc-351f-4d23-962d-48395faa4110",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BoardCenter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WSAD",
                    "id": "c422ba5c-5148-45fd-8c3a-86a08855d351",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7618b3ef-4ae2-46b0-9b04-5a9e4cf694a7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cefc7b5b-f82b-45ba-890d-36751fbe3f2a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7b2be0df-9319-4172-baee-4b409cc1c264",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2a234a75-207e-4591-9f44-30500f9c4176",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "RMB_Move",
                    "id": "b813aa6b-eb42-4fb1-aa2d-5c75cab28660",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "58fff20e-609a-41ff-9ae3-13c9c34c654d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "04e0f57b-be08-4630-aea5-c5202e027c67",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "505d17ec-c6dc-4956-b788-49e29b864b3d",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cdda333-4b62-4a19-b43b-6400e1cd3796",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38f1b5ce-ff82-49ea-8e5b-60a3f4d4addd",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "791ad77c-6c60-466c-9471-11e8293296ca",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1381a3e0-477f-422e-a81a-0a7dc48ac806",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4408876-8c4d-43fc-af49-949e4feba2f9",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Hold(duration=0.5,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "MMBPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}